--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -416,6 +416,66 @@ body {
 }
 
 /*ROUTS END*/
+
+/*Test*/
+.test {
+  display: flex;
+  background: no-repeat url(/assets/images/test/Mask\ Group.png);
+  background-size: 100%;
+  height: 600px;
+  justify-content: center;
+  text-align: center;
+  padding-top: 5%;
+}
+
+.test-title {
+  font-weight: 700, bold;
+  font-size: 36px;
+  line-height: 130%;
+  color: white;
+}
+
+.test_text {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 130%;
+  color: white;
+}
+
+.btn-test {
+  width: 35%;
+  height: 10%;
+  background: #037e8c;
+  color: #ffffff;
+  border-radius: 9px;
+  border: none;
+}
+
+/*Photo*/
+
+.Photo-title {
+  font-weight: 700, bold;
+  font-size: 36px;
+  line-height: 130%;
+  text-align: center;
+  margin: 0;
+  padding: 4%;
+}
+
+.photo_container {
+  height: 100%;
+  max-width: 100%;
+  margin-bottom: 3%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.photo_slider {
+  height: 100%;
+  width: 100%;
+}
+
 /*video*/
 
 .video_container {
@@ -423,15 +483,14 @@ body {
   justify-content: center;
   align-items: center;
   max-width: 100%;
-  height: 594px;
-  background: no-repeat
-    url(/CFMOTO/assets/images/services/unsplash_dvACrXUExLs.png);
+  height: 100%;
+  background: no-repeat url(/assets/images/services/unsplash_dvACrXUExLs.png);
   background-size: 100%;
 }
 
 .pic_video {
   max-width: 100%;
-  height: auto;
+  margin: 5%;
 }
 
 /*Team*/
@@ -479,7 +538,7 @@ body {
 
 .services {
   padding: 1%;
-  background-image: url(/CFMOTO/assets/images/video/фон.png);
+  background-image: url(/assets/images/video/фон.png)
 }
 
 .s_title {
@@ -531,7 +590,6 @@ body {
   margin: 2% 5%;
 }
 
-/*ROUTS END*/
 /*--------------------------Questions-----------------------------*/
 .feedback {
   padding-top: 10%;
