--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -12,174 +12,214 @@ body {
 /*-----------------------sasha's part------------------------------------*/
 
 .header {
-  max-height: 100vh;
-  height: 918px;
   background-image: url(../images/sasha/background.png);
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-.wrapper {
-  max-width: 90%;
-  height: 100%;
-  margin: 0px auto;
+.header-container {
+  padding: 1% 5% 15%;
 }
 
-.header__row {
+.top {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  padding: 20px 10px;
+  align-items: flex-start;
 }
 
-.header__logo {
+.top__logo {
+  width: 8vw;
+}
+
+.navigation {
+  margin-top: 2%;
+  margin-left: 12%;
+  width: 55%;
   display: flex;
-  align-items: center;
+  justify-content: space-between;
 }
 
-.header__list {
-  word-spacing: 5em;
-}
-
-.header__list a {
+.navigation__link {
   text-decoration: none;
   color: #ffffff;
-  size: 14px;
+  font-size: 1vw;
   font-weight: 600;
 }
 
-.header__phone {
-  display: flex;
-  flex-direction: column;
-  color: #ffffff;
-  padding-top: 35px;
-  line-height: 3;
+.navigation__link:hover {
+  text-decoration: underline;
 }
 
-.header__phone span {
-  font-size: 20px;
-  font-weight: 600;
-}
-
-.header__title {
-  display: flex;
-  flex-direction: column;
-  height: 70vh;
-  width: 30%;
-}
-
-.header__title {
-  color: #ffffff;
-}
-
-.header__title h1 {
-  font-size: 70px;
-  font-weight: 800;
-}
-
-.header__title h3 {
-  font-size: 24px;
-  font-weight: 500;
-}
-
-#blue {
+.navigation__link_blue {
   color: #037e8c;
 }
 
-.header__button {
-  background: rgba(255, 255, 255, 0.4);
-  border-radius: 9px;
-  border: none;
-  width: 185px;
-  height: 40px;
-  justify-content: center;
-
-  text-decoration: none;
-  font-weight: 600;
-  font-size: 14px;
+.right {
+  width: 13vw;
+  margin-top: 1.5%;
+  display: flex;
+  flex-direction: column;
   color: #ffffff;
 }
 
-.header__bluebutton {
+.phone {
+  margin-bottom: 4%;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.phone__img {
+  width: 1.4vw;
+}
+
+.right__number {
+  margin: 0;
+  font-size: 1.3vw;
+  font-weight: 600;
+}
+
+.right__button {
+  padding: 0.7vw 0.2vw;
+  align-self: flex-end;
+  background: rgba(255, 255, 255, 0.4);
+  border-radius: 9px;
+  border: none;
+  width: 85%;
+  font-size: 1vw;
+  font-weight: 600;
+  color: #ffffff;
+}
+
+.area {
+  margin-top: 6%;
+  color: #ffffff;
+}
+
+.area__title {
+  margin-top: 9%;
+  font-size: 5.5vw;
+  font-weight: 800;
+}
+
+.area__text {
+  font-size: 1.9vw;
+  font-weight: 500;
+}
+
+.area-button__img {
+  width: 1.9vw;
+}
+
+.area-button {
+  padding: 0.7vw 0.2vw;
+  margin-top: 6%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   background: #037e8c;
   border-radius: 9px;
   border: none;
-  width: 274px;
-  height: 55px;
-  margin-top: 3em;
-  justify-content: space-around;
-  align-items: center;
-
-  text-decoration: none;
+  width: 22%;
   font-weight: 600;
-  font-size: 16px;
+  font-size: 1.1vw;
   color: #ffffff;
 }
 
 .sale {
-  height: 40vh;
-  background-image: url(../images/sasha/багги\ 2.png),
-    url(../images/sasha/деталька\ 1.png);
-  background-repeat: no-repeat, no-repeat;
-  background-position: left bottom, right top;
+  position: relative;
 }
 
-.sale__title,
-.sertificate__title h2 {
-  display: flex;
+.sale__img_car {
+  width: 40%;
+  z-index: -1;
+
+  position: absolute;
+  bottom: 5%;
+}
+
+.sale__img_detail {
+  z-index: -1;
+  width: 40%;
+
+  position: absolute;
+  right: 0;
+  top: 25%;
+}
+
+.sale-container {
+  margin: 2% 5% 5%;
+}
+
+.sale__title {
+  text-align: center;
   font-size: 36px;
   font-weight: 700;
-  justify-content: center;
 }
 
-.sale__cards {
+.cards {
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 
+.item__img {
+  max-width: 98%;
+}
+
+/*----sertificate----*/
 .sertificate {
   background-image: url(../images/sasha/Frame\ 14.png);
-  height: 613px;
+}
+
+.sertificate-container {
+  padding: 2% 5% 5%;
 }
 
 .sertificate__title {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-
-.sertificate__items {
-  display: flex;
-  justify-content: space-evenly;
-  padding-top: 40px;
+  font-size: 36px;
+  font-weight: 700;
+  text-align: center;
 }
 
 .sertificate__text {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+  margin-bottom: 3%;
+  font-size: 20px;
+  font-weight: 500;
+  color: #037e8c;
+  text-align: center;
 }
 
-.sertificate__button {
+.common {
   display: flex;
+  justify-content: space-between;
+}
+
+.information {
+  width: 42%;
+}
+
+.information__text {
+  margin-top: 5%;
+  font-size: 1.3vw;
+  line-height: 31px;
+}
+
+.card__img {
+  max-width: 98%;
+}
+
+.information__button {
+  margin-top: 5%;
   background: none;
   border-radius: 9px;
   border: 1.5px solid #037e8c;
-  width: 277px;
-  height: 45px;
-  margin-top: 3em;
-  justify-content: space-around;
-  align-items: center;
-
-  text-decoration: none;
+  width: 52%;
+  padding: 3%;
+  font-size: 0.8vw;
   font-weight: 600;
-  font-size: 14px;
   color: #037e8c;
 }
+
 
 /*---------------------------sasha's part end---------------------------------*/
 
@@ -328,9 +368,9 @@ main {
   text-transform: uppercase;
 }
 
-.routes__time > span,
-.routes__distance > span,
-.routes__complexity > span {
+.routes__time>span,
+.routes__distance>span,
+.routes__complexity>span {
   font-weight: bold;
   font-size: 14px;
   line-height: 17.39px;
@@ -569,7 +609,7 @@ main {
   display: none;
 }
 
-.block__hide + .block__label ~ .answer {
+.block__hide+.block__label~.answer {
   display: none;
 }
 
